codex-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Explain this codebase                                                         "
"                                                                                "
"  gpt-5.3-darwin-code default · /tmp/project                                    "
